remove parent focus on tags
